package es.kiwi.behavioral.interpreter.example2;
/**
 * 终结符表达式
 */
public class TerminalExpression extends AbstractExpression{
    /**
     * 解释的操作
     *
     * @param ctx 上下文对象
     */
    @Override
    public void interpret(Context ctx) {
        //实现与语法规则中的终结符相关联的解释操作
    }
}
